compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@dead_global_elimination__mixed.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/dead_global_elimination/mixed.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
setglobal 0, temp.7
getglobal temp.8, 1
x.9 = temp.8
temp.10 = int 30
setglobal 2, temp.10
getglobal temp.11, 3
y.12 = temp.11
temp.13 = int 20
setglobal 1, temp.13
return 


----------- eliminate_dead_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
getglobal temp.8, 0
x.9 = temp.8
temp.10 = int 30
getglobal temp.11, 1
y.12 = temp.11
temp.13 = int 20
setglobal 0, temp.13
return
