compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@dead_global_elimination__struct_global_write_and_read.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/dead_global_elimination/struct_global_write_and_read.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.11 = int 10
temp.12 = int 20
temp.0.x.13 = temp.11
temp.0.y.14 = temp.12
temp.15 = temp.0.x.13
setglobal 1, temp.15
temp.16 = temp.0.y.14
setglobal 2, temp.16
getglobal temp.17, 1
temp.18 = extern test(temp.17)
getglobal temp.19, 2
temp.20 = extern test(temp.19)
return 


----------- eliminate_dead_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.11 = int 10
temp.12 = int 20
temp.0.x.13 = temp.11
temp.0.y.14 = temp.12
temp.15 = temp.0.x.13
setglobal 0, temp.15
temp.16 = temp.0.y.14
setglobal 1, temp.16
getglobal temp.17, 0
temp.18 = extern test(temp.17)
getglobal temp.19, 1
temp.20 = extern test(temp.19)
return
