compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@dead_global_elimination__unread_removed.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/dead_global_elimination/unread_removed.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2 = int 5
temp.3 = temp.2
setglobal 0, temp.3
return 


----------- eliminate_dead_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2 = int 5
temp.3 = temp.2
return
